[package]
name = "rs-datastore"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
criterion = "0.3"
tonic = "0.11"
prost = "0.12" 
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
bincode = "1.3"   

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"

[[bench]]
name = "benchmark"
harness = false

