[package]
name = "rs-datastore"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
criterion = "0.3"
prost = "0.12"
tokio = { version = "1.37", features = ["full"] }
rand = "0.8.5"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
bincode = "1.3"   
rmp-serde = "0.15"
serde_json = "1.0"
clap = "4.5"
log = "0.4.21"
env_logger = "0.11.3"
futures = "0.3.30"
tonic = "0.10.0"
socket2 = { version="0.4", features = ["all"]}
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = "z"  # Optimize for size
lto = true  # Link Time Optimization
codegen-units = 1  # Maximize optimizations by using a single codegen unit
panic = "abort"  # Abort on panic to reduce binary size
incremental = false  # Disable incremental compilation for better optimizations
